examples/ingress/haproxy/default-backend.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: ingress-default-backend
  name: ingress-default-backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      run: ingress-default-backend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: ingress-default-backend
    spec:
      containers:
      - image: gcr.io/google_containers/defaultbackend:1.0
        imagePullPolicy: IfNotPresent
        name: ingress-default-backend
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 10m
            memory: 20Mi
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-default-backend
  namespace: default
spec:
  clusterIP: 10.0.0.39
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: ingress-default-backend
  sessionAffinity: None
  type: ClusterIP
