examples/ingress/haproxy/haproxy-ingress.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: haproxy-ingress
  name: haproxy-ingress
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      run: haproxy-ingress
  template:
    metadata:
      labels:
        run: haproxy-ingress
    spec:
      containers:
      - name: haproxy-ingress
        image: quay.io/jcmoraisjr/haproxy-ingress
        args:
        - --default-backend-service=default/ingress-default-backend
        - --default-ssl-certificate=default/tls-secret
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: stat
          containerPort: 1936
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: haproxy-ingress
  name: haproxy-ingress
  namespace: default
spec:
  clusterIP: 10.0.0.52
  ports:
  - name: port-1
    nodePort: 31655
    port: 80
    protocol: TCP
    targetPort: 80
  - name: port-2
    nodePort: 31528
    port: 443
    protocol: TCP
    targetPort: 443
  - name: port-3
    nodePort: 31261
    port: 1936
    protocol: TCP
    targetPort: 1936
  selector:
    run: haproxy-ingress
  sessionAffinity: None
  type: NodePort
